# atomic-red-team

./: .gitignore  pyproject.toml
.github/workflows/: assign-labels.yaml  assign-labels.yml  generate-counter.yml  generate-docs.yml  run-atomics.yml  validate-atomics.yml  validate-pull-request.yml  validate-schema.yml
atomic_red_team/: guid.py  runner.py  spec.yaml  validator.py
atomics/Indexes/: azure-ad-index.yaml  iaas_azure-index.yaml
atomics/T1003/: T1003.yaml
atomics/T1003.004/: T1003.004.yaml
atomics/T1059.004/: T1059.004.yaml
atomics/T1078.004/: T1078.004.yaml
atomics/T1090.001/: T1090.001.yaml
atomics/T1110.001/: T1110.001.yaml
atomics/T1110.004/: T1110.004.yaml
atomics/T1113/: T1113.yaml
atomics/T1132.001/: T1132.001.yaml
atomics/T1135/: T1135.yaml
atomics/T1201/: T1201.yaml
atomics/T1217/: T1217.yaml
atomics/T1222.002/: T1222.002.yaml
atomics/T1486/: T1486.yaml
atomics/T1529/: T1529.yaml
atomics/T1531/: T1531.yaml
atomics/T1546.005/: T1546.005.yaml
atomics/T1547.006/: T1547.006.yaml
atomics/T1548.001/: T1548.001.yaml
atomics/T1564.001/: T1564.001.yaml
atomics/T1999/: T1999.yaml
