[tool.poetry]
name = "atomic-red-team"
version = "0.1.0"
description = ""
authors = ["Maintainers <opensource@redcanary.com>"]
readme = "README.md"
packages = [
    { include = "atomic_red_team" }
]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
jsonschema = "^4.21.1"
requests = "^2.31.0"
ruamel-yaml = "^0.18.6"
pydantic = "^2.6.4"
hypothesis = "^6.100.0"
pytest = "^8.1.1"
typer = "^0.12.1"


[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
